--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -60,7 +60,7 @@
         <% } %>
         <% if(currentUser){ %>
         <li class="nav-item">
-          <a class="nav-link" href="/logout"><b>Login</b></a>
+          <a class="nav-link" href="/logout"><b>Logout</b></a>
         </li>
         <% } %>
       </ul>
