--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -19,7 +19,7 @@
         rel="stylesheet">
 
     <link rel="stylesheet" href="/css/rating.css">
-    <link rel="icon" type="image/png" href="pink-background-white-line-airbnb-600nw-2203503727.png">
+    <link rel="icon" type="image/png" href="/images/favicon.png">
 </head>
 
 <body>
