--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,9 +1,9 @@
 <footer>
     <div class="f-info">
         <div class="f-info-socials">
-            <i class="fa-brands fa-square-facebook"></i>
-            <i class="fa-brands fa-square-instagram"></i>
-            <i class="fa-brands fa-linkedin"></i>
+            <a href=""><i class="fa-brands fa-square-facebook"></i></a>
+            <a href="https://instagram.com/harshbelike/"><i class="fa-brands fa-square-instagram"></i></a>
+            <a href="https://in.linkedin.com/in/harsh-yadav-783917299"><i class="fa-brands fa-linkedin"></i></a>
         </div>
         <div class="f-info-brand">&copy; WanderLust Private Limited</div>
         <div class="f-info-links">
